<resources>
    <string name="app_name">Run Speed, Run</string>
    <string name="title_activity_main">@string/app_name</string>
    <string name="action_search">Search</string>

    <string name="navigation_drawer_open">Open navigation menu</string>
    <string name="navigation_drawer_close">Close navigation menu</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_latest">Latest Runs</string>
    <string name="nav_games">Games</string>
    <string name="nav_favorites">Favorites</string>

    <string name="latest_run_time_format">%1$s <b>by</b> %2$s</string>
    <string name="loading_games_text">Loading Games</string>
    <string name="loading_leaderboards_text">Loading Leaderboard</string>
    <string name="loading_latest_runs_text">Loading Latest Runs</string>
    <string name="loading_favorites_text">Loading Favorites</string>
    <string name="not_found_games_text">No games found</string>
    <string name="not_found_leaderboard_text">No leaderboard found for this category</string>
    <string name="not_found_latest_runs_text">No Latest Runs found</string>
    <string name="not_found_favorites_text">No Favorites found</string>

    <string name="sad_face_description">Sad Face Emotion</string>
    <string name="game_cover_description">Game Cover</string>
    <string name="error_load_games_text">Error on load Games</string>
    <string name="error_load_leaderboards_text">Error on load Leaderboard</string>
    <string name="error_load_latest_runs_text">Error on load Latest Runs</string>
    <string name="error_load_favorites_text">Error on load Favorites</string>
    <string name="reload_button">Reload</string>
    <string name="game_not_found">Game not found</string>
    <string name="empty_title">\u0020</string>

    <string name="place_description">Place Icon</string>
    <string name="header_rank">Rank</string>
    <string name="header_player">Player</string>
    <string name="header_time">Time</string>
    <string name="video_description">Video Icon</string>

    <string name="favorite_saved_msg">Leaderboard Saved</string>
    <string name="favorite_save_error_msg">Erro on save Leaderboard</string>
    <string name="favorite_removed_msg">Leaderboard Removed</string>
    <string name="favorite_remove_error_msg">Error on remove Leaderboard</string>

    <string name="search_hint">Game name</string>

    <string name="main_notification_channel_name">Primary</string>
    <string name="notification_title">%1$s has a new first place</string>
    <string name="notification_body">Category %1$s has a new record of %2$s</string>

    <string name="appwidget_title_text">Latest Runs</string>
    <string name="widget_text">%1$s | %2$s</string>
    <string name="widget_empty_list">No games to display</string>

    <string name="admob_app_id">ca-app-pub-9024902600072738~8078435265</string>
    <string name="admob_main_bottom">ca-app-pub-9024902600072738/8777149704</string>

</resources>
