<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <data>
        <variable
            name="presenter"
            type="br.com.duoli.speedrunapp.presenter.DataPresenter" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/icon_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/sad_face_description"
            app:layout_constraintBottom_toTopOf="@+id/text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:srcCompat="@drawable/ic_emoticon_sad" />

        <TextView
            android:id="@+id/text"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/error_load_games_text"
            app:layout_constraintBottom_toTopOf="@+id/reload_button"
            app:layout_constraintEnd_toEndOf="@+id/icon_image"
            app:layout_constraintStart_toStartOf="@+id/icon_image"
            app:layout_constraintTop_toBottomOf="@+id/icon_image" />

        <Button
            android:id="@+id/reload_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/reload_button"
            android:onClick="@{() -> presenter.reloadData(true)}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/text"
            app:layout_constraintStart_toStartOf="@+id/text"
            app:layout_constraintTop_toBottomOf="@+id/text" />

    </android.support.constraint.ConstraintLayout>

</layout>