<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="favoritePresenter"
            type="br.com.duoli.speedrunapp.presenter.SaveFavoritePresenter" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/recycler_view_header"
            android:layout_width="match_parent"
            android:layout_height="@dimen/leaderboard_header_height"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_rank"
                style="@style/AppTheme.LeaderboardHeaderStyle"
                android:layout_width="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="0"
                android:text="@string/header_rank" />

            <TextView
                android:id="@+id/tv_player"
                style="@style/AppTheme.LeaderboardHeaderStyle"
                android:layout_marginStart="24dp"
                android:text="@string/header_player" />

            <TextView
                android:id="@+id/tv_time"
                style="@style/AppTheme.LeaderboardHeaderStyle"
                android:layout_marginStart="16dp"
                android:text="@string/header_time" />

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recycler_view_header"
            tools:listitem="@layout/leaderboard_item" />

        <include
            android:id="@+id/loading_layout"
            style="@style/AppTheme.IncludeLayout"
            layout="@layout/loading_layout"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recycler_view_header" />

        <include
            android:id="@+id/error_layout"
            style="@style/AppTheme.IncludeLayout"
            layout="@layout/error_layout"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recycler_view_header" />

        <include
            android:id="@+id/not_found_layout"
            style="@style/AppTheme.IncludeLayout"
            layout="@layout/not_found_layout"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recycler_view_header" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/favorite_game_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:onClick="@{() -> !favoritePresenter.isLeaderboardFavorited() ? favoritePresenter.favoriteLeaderboard() : favoritePresenter.removeFavoriteLeaderboard()}"
            app:elevation="6dp"
            app:favoriteIcon="@{favoritePresenter.isLeaderboardFavorited()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:pressedTranslationZ="6dp" />

    </android.support.constraint.ConstraintLayout>

</layout>